2011-09-03 Susumu Oda <Susumu.Oda@cern.ch>
	* Added topBS to python/DefaultInputs.py to use it for q126 test 
	  (python/ArgDicTools.py).  
	* Tagging as PATJobTransforms-00-03-59

2011-08-31  Junji Tojo <Junji.Tojo@cern.ch>
        * Add outputNTUP_HSG5GAMZFile and outputNTUP_HSG5ZBBFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-58

2011-08-25  Junji Tojo <Junji.Tojo@cern.ch>
        * Add outputD2AODM_TOPJETFile, outputNTUP_TOPELFile, outputNTUP_TOPMUFile, outputNTUP_TOPJETFile and outputNTUP_TOPEJETFile in script/Reco_trf.py
        * Add outputNTUP_TOPELFile, outputNTUP_TOPMUFile, outputNTUP_TOPJETFile and outputNTUP_TOPEJETFile in script/Merging_trf.py
        * Tagging as PATJobTransforms-00-03-57

2011-08-24  Junji Tojo <Junji.Tojo@cern.ch>
        * Add outputNTUP_HSG5WHFile, outputNTUP_HSG5ZHLLFile and outputNTUP_HSG5ZHMETFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-56

2011-08-10 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Ensure that AMI tag resolution will work with a voms proxy in ArgDictTools
    * Consolidate AMI methods 
    * Handle AMI query exceptions properly
    * Tagging as PATJobTransforms-00-03-55

2011-08-02 Andrea Di Simone
	* adding NTUP_HSG2 to ListOfDefaultPositionalKeys
	* tagging PATJobTransforms-00-03-54

2011-07-13 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added outputNTUP_L1TGCFile to script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-53

2011-06-15 Junji Tojo <Junji.Tojo@cern.ch>
	* Add outputNTUP_SMQCDFile in script/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-52

2011-06-14 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default RDO to mc10_7TeV (MC10b) (python/DefaultInputs.py).
	* Tagging as PATJobTransforms-00-03-51

2011-06-14 Susumu Oda <Susumu.Oda@cern.ch>
	* Changed default ESD and AOD to data11_7TeV (python/DefaultInputs.py).
	* Changed default cosmic ByteStream file to data11_cos (python/DefaultInputs.py).
	* Tagging as PATJobTransforms-00-03-50