@@ -1,3 +1,8 @@
+2011-09-10 Rolf Seuster <seuster AT  cern.ch>
+	* remove hack, as ESDtoESD re-reconstruction, works now with merged trf
+	* add a few outputfiles DESD_ZEE, etc.
+	* Tagging as PATJobTransforms-00-03-60
+
 2011-09-03 Susumu Oda <Susumu.Oda@cern.ch>
 	* Added topBS to python/DefaultInputs.py to use it for q126 test 
 	  (python/ArgDicTools.py).  
